--- a/index.html
+++ b/index.html
@@ -55,11 +55,19 @@
     
     <h1 class="blinky">this site is under HEAVY CONSTRUCTION</h1><p>hi lol im <b>super bored</b> and i post ramblings( probably) and things i did here bc i can</p>
 
-  <img src="https://web.archive.org/web/20090820121919/http://geocities.com/jaysite2000/Computerturning.gif" alt="its a compy">
+  <img src="https://web.archive.org/web/20090820121919/http://geocities.com/jaysite2000/Computerturning.gif" alt="its a compy" title="its a compy">
 
   <p style="font-size: 12px;">© 2008-2025 me, ur local net gremlin</p>
   
 
 
 
-</div></body></html>
+</div>
+
+<div class="box">
+    <h2>Who?/</h2>
+    <p>I like old sttuff (you prolly figured that out already unless youre a dumbass with the iq of a rock)</p></p>
+    <p>I like old sttuff (you prolly figured that out already unless youre a dumbass with the iq of a rock)</p></p>
+</div>
+
+</body></html>
