--- a/index.html
+++ b/index.html
@@ -36,6 +36,22 @@
   <p>hi lol im <b>super bored</b> and i post things i did here bc i can</p>
   <p>i like old sttuff, you prolly figured that out already from all the old looking gifs unless youre a dumbass with the iq of a fucking rock</p>
   <p>im still learning stuff—im seventeen. my discord is <b>dirma</b> if you wanna chat or sumt</p>
+  <p>i use arch linux and windows but usually i use arch because it actually makes my LAP-FUCKING-TOP cold enought to be ON my LAP not on some laptop cooler acting as a space heater<p> 
+  <p>fuck the rich, pirate the softwares, use alternatives, fuck the greedy fuckers, especially fuck nintendo, revert to clippy<p>
+  <a href="https://dirma-dayo.github.io/imfreeeeeeeeee-nonotrllylmao/" target="_blank">how to be free from ads and paywalls</a>
+  <br>
+  <span class="spoiler">(rant alert) I KNOW ITS A "GAMING" LAPTOP BUT I DONT WANT TO HAVE A 60C HUNK OF PLASTIC ON MY LAP WHEN I DO HOMEWORK AND PROCRASCINATE FOR HOURS its such an inconvenience istg why AND THIS FUCKASS ONLY HAVE <b>ONE</b> FUCKING FAN THATS SO FUCKED AS A "GAMING" LAPTOP INNIT</span>
+<style>
+  .spoiler {
+    background-color: black;
+    color: black;
+    user-select: none;
+  }
+  .spoiler:hover {
+    color: white;
+  }
+</style>
+
 
   <table>
     <tr>
